# Fleet-Data-ML-AI

./: .env.example  .fastapicloudignore  .gitignore  README.md  fastapi-cloud.md  pyproject.toml  render.yaml  sample-file.csv
.github/workflows/: ci.yml  deploy-fastapi-cloud.yml
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: analytics.py  health.py  uploads.py
app/application/services/: health_service.py  telemetry_analytics_service.py  telemetry_transform_service.py  telemetry_upload_service.py
app/core/: config.py  logging.py
app/domain/: exceptions.py  telemetry_schema.py  upload_status.py
app/domain/entities/: duplicate_row_diagnostic.py  health_status.py  telemetry_analytics_breakdown_row.py  telemetry_analytics_query.py  telemetry_analytics_summary.py  telemetry_upload.py  telemetry_upload_payload.py  upload_audit_detail.py  upload_audit_record.py  upload_sanity_summary.py
app/domain/repositories/: __init__.py  health_repository.py  telemetry_analytics_repository.py  telemetry_curated_artifact_repository.py  upload_audit_repository.py  upload_storage_repository.py
app/infrastructure/iceberg/: __init__.py  bootstrap.py  catalog.py
app/infrastructure/repositories/: bigquery_telemetry_analytics_repository.py  duckdb_telemetry_analytics_repository.py  gcp_telemetry_curated_artifact_repository.py  gcs_upload_storage_repository.py  local_telemetry_curated_artifact_repository.py  local_upload_storage_repository.py  sqlite_upload_audit_repository.py  static_health_repository.py
app/middleware/: upload_auth.py
app/schemas/: analytics.py  uploads.py
app/static/upload/: upload.css  upload.js
app/templates/: upload.html
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
tests/: test_health.py  test_iceberg.py  test_upload_page.py  test_uploads.py
