[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-data-ml-ai"
version = "0.1.0"
description = "A production-style learning project for FastAPI, telemetry analytics, DuckDB, Athena, and MLOps."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "duckdb>=1.1.3",
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-storage>=2.19.0",
    "pyiceberg[gcsfs,gcp-auth,duckdb,sql-sqlite,pyarrow,bigquery]>=0.11.1",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.14.0",
    "mypy>=1.17.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true

[tool.fastapi]
entrypoint = "app.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["data*"]
namespaces = false
